--- a/dvdstore-web/src/main/resources/templates/add-movie-form.html
+++ b/dvdstore-web/src/main/resources/templates/add-movie-form.html
@@ -5,7 +5,7 @@
     <title>Details du film</title>
 </head>
 <body>
-<form th:action="@{/movie}" method="POST" th:object="${movieForm}">
+<form th:action="@{/movie/add}" method="POST" th:object="${movieForm}">
     <p>Titre<input type="text" th:field="*{title}"/></p>
     <div th:if="${#fields.hasErrors('title')}" th:errors="*{title}"></div>
     <p>Genre<select th:field="*{genre}">
