--- a/dvdstore-web/src/main/resources/templates/add-movie-form.html
+++ b/dvdstore-web/src/main/resources/templates/add-movie-form.html
@@ -19,8 +19,12 @@
     </select>
     </p>
     <div th:if="${#fields.hasErrors('genre')}" th:errors="*{genre}"></div>
-    <p>Description<input type="textarea" th:field="*{description}"/></p>
+    <p>Description<textarea rows="4" cols="50" th:field="*{description}"/></p>
     <div th:if="${#fields.hasErrors('description')}" th:errors="*{description}"></div>
+    <p>Prenom<input type="text" th:field="*{firstName}"/></p>
+    <div th:if="${#fields.hasErrors('firstName')}" th:errors="*{firstName}"></div>
+    <p>Nom<input type="text" th:field="*{lastName}"/></p>
+    <div th:if="${#fields.hasErrors('lastName')}" th:errors="*{lastName}"></div>
     <input type="submit" value="OK"/>
 </form>
 </body>
